--- a/routing/resources/style.css
+++ b/routing/resources/style.css
@@ -48,7 +48,7 @@ body{
 }
 /**** REGISTER ****/
 .formbutton{
-	
+
 }
 /**** GUEST ****/
 #guest_table{
@@ -125,12 +125,13 @@ body{
 }
 
 #save_favs_img{
-	margin-left: 50% ;
+	margin-left: 43% ;
 	cursor: pointer;
 }
 #sortFavs{
-	margin-left: 50% ;
+	margin-left: 5% ;
 	cursor: pointer;
+	position: absolute;
 }
 
 
@@ -172,4 +173,27 @@ body{
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
